<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register">

    <Button
            android:text="@string/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRegister"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="160dp" android:layout_marginStart="160dp" android:layout_marginTop="96dp"
            android:onClick="checkRegister"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="96dp" android:layout_marginStart="96dp" android:layout_marginTop="44dp"
            android:hint="@string/password_hint"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail" android:layout_marginTop="152dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="96dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="96dp"
            android:hint="@string/email_hint"/>
    <TextView
            android:text="@string/button_register"
            android:layout_width="93dp"
            android:layout_height="53dp"
            android:id="@+id/textViewRegister"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="156dp" android:layout_marginStart="156dp" android:layout_marginTop="72dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>