<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/lightBackground"
        android:layoutDirection="rtl"
        android:textAlignment="center"

        android:focusable="false"
        android:focusableInTouchMode="false"
tools:targetApi="jelly_bean_mr1">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:textAlignment="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/background"
            android:paddingTop="2dp"
            android:paddingBottom="1dp"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="5dp">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:layoutDirection="ltr"
                android:textAlignment="center"

                android:background="@drawable/background"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"

                android:paddingLeft="3dp"
                android:paddingRight="3dp">

            <ImageView
                    android:id="@+id/picture_path"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:layout_weight="0"
                    android:background="@color/lowDarkfont"


                    android:src="@drawable/persoicon" android:contentDescription="@string/persoicon_desc"/>

            <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="start"
                    android:paddingRight="3dp"
                    android:text="@string/text_usr_name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#0894f8"
                    android:textSize="12sp"
                    android:paddingLeft="0dp"
                    android:textStyle="bold" android:paddingEnd="3dp" android:paddingStart="0dp"/>

            <TextView
                    android:paddingEnd="1dp"
                    android:layout_weight="0"
                    android:background="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tweet_date"
                    android:textSize="12sp"
                    android:paddingLeft="0dp"
                    android:id="@+id/txt_tweet_date" android:paddingRight="1dp" android:paddingStart="0dp"/>


        </LinearLayout>

        <TextView
                android:fontFamily="sans-serif-medium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_tweet"
                android:id="@+id/txt_tweet"
                android:gravity="start"
                android:textAlignment="gravity"
                android:paddingStart="0dp"
                android:background="@color/white"
                android:paddingBottom="2dp"
                android:textSize="18sp"
                android:textColor="#040101" android:paddingEnd="5dp" android:paddingLeft="0dp"/>

        <ImageView
                android:background="@drawable/background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_width="fill_parent"
                android:src="@drawable/tweets"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/tweet_picture"

                android:layout_marginBottom="1dp"
                android:layout_height="100pt" android:contentDescription="@string/tweet_pick_desc"/>

        <LinearLayout

                android:paddingLeft="10dp"
                android:paddingRight="3dp"
                android:paddingTop="3dp"
                android:paddingBottom="5dp"
                android:layoutDirection="ltr"
                android:orientation="horizontal"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingStart="10dp" android:paddingEnd="3dp">

            <ImageView

                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/iv_share"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/ic_favorite_border_black_24dp" android:contentDescription="@string/favorite_description"
                    android:layout_marginEnd="8dp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>