<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="76dp" android:layout_marginStart="96dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="96dp"
            android:hint="@string/email_hint"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toBottomOf="@+id/email"
            android:layout_marginTop="52dp" android:layout_marginStart="96dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="96dp"
            android:hint="@string/password_hint"/>
    <ImageView
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:src="@drawable/persoicon"
            android:id="@+id/imagePerson"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toBottomOf="@+id/password"
            android:layout_marginTop="72dp" android:visibility="visible"
            android:layout_marginStart="124dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="124dp"/>
    <Button
            android:text="@string/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/imagePerson" tools:ignore="MissingConstraints"
            android:layout_marginStart="160dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="160dp" android:background="@android:color/holo_blue_bright"
            android:onClick="checkLogin"/>
</androidx.constraintlayout.widget.ConstraintLayout>