<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/lightBackground"
        android:layoutDirection="rtl"
        android:textAlignment="center"

        android:focusable="false"
        android:focusableInTouchMode="false"
tools:targetApi="jelly_bean_mr1">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:textAlignment="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:background="@drawable/background"
            android:paddingTop="2dp"
            android:paddingBottom="1dp"

            android:paddingLeft="0dp" android:paddingRight="5dp">


        <EditText
                android:layout_width="match_parent"
                android:layout_height="50pt"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/etPost"
                android:hint="@string/post_tweet_hint" android:autofillHints="" tools:targetApi="o"/>


        <LinearLayout

                android:paddingStart="10dp"
                android:paddingEnd="3dp"
                android:paddingTop="3dp"
                android:paddingBottom="5dp"
                android:layoutDirection="ltr"
                android:orientation="horizontal"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent" tools:targetApi="jelly_bean_mr1" android:paddingLeft="10dp"
                android:paddingRight="3dp">

            <ImageView

                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/iv_post"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/ic_send_black_24dp" android:contentDescription="@string/send_description"
                    android:layout_marginRight="8dp"/>
            <ImageView

                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/iv_attach"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/ic_attach_file_black_24dp" android:contentDescription="@string/attach_description"
                    android:layout_marginRight="8dp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>